[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/Button Select.wav" type="AudioStream" id=1]
[ext_resource path="res://ui/Button Hover.wav" type="AudioStream" id=2]
[ext_resource path="res://ui/button.gd" type="Script" id=3]
[ext_resource path="res://ui/jbut2.png" type="Texture" id=4]
[ext_resource path="res://ui/jbut3.png" type="Texture" id=5]
[ext_resource path="res://ui/jbut1.png" type="Texture" id=6]
[ext_resource path="res://ui/Purisa.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="Button" type="TextureButton"]
margin_left = 0.544556
margin_top = 1.27116
margin_right = 516.545
margin_bottom = 265.271
rect_min_size = Vector2( 100, 50 )
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 32.0917
margin_top = 33.0356
margin_right = 482.092
margin_bottom = 228.036
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "replay"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="finished" from="Select" to="." method="_on_Select_finished"]
